<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="39dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tipo2"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="110dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:text="@string/data_lan_amento"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipo"
        app:layout_constraintStart_toEndOf="@+id/tvTipo" />

    <TextView
        android:id="@+id/tvValorLanc"
        android:layout_width="89dp"
        android:layout_height="33dp"
        android:text="@string/valor"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetalheLanc"
        app:layout_constraintStart_toEndOf="@+id/tvDetalheLanc" />

    <TextView
        android:id="@+id/tvDetalheLanc"
        android:layout_width="99dp"
        android:layout_height="33dp"
        android:text="@string/detalhe"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/tvData"
        app:layout_constraintStart_toEndOf="@+id/tvData" />

</androidx.constraintlayout.widget.ConstraintLayout>